Closed Bug 827217 Opened 13 years ago Closed 13 years ago

webgl.can-lose-context-in-foreground=false crashes in desktop Firefox

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla20
Tracking Status
firefox19 --- verified
firefox20 --- verified
b2g18 --- fixed

People

(Reporter: jruderman, Assigned: justin.lebar+bug)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(3 files)

Attached file testcase
1. Create a new profile (mkdir -p ~/px/a; firefox -profile ~/px/a) 2. Set: user_pref("webgl.can-lose-context-in-foreground", false); 3. Install https://www.squarefree.com/extensions/domFuzzLite3.xpi 4. Load the testcase Assertion failure: mRawPtr, at StaticPtr.h:132
Attached file stack+
Attached patch Patch, v1Splinter Review
I think this could affect B2G if we ever created a GL context in the main process.
Attachment #698559 - Flags: review?(jones.chris.g)
Attachment #698559 - Flags: review?(jones.chris.g) → review+
Comment on attachment 698559 [details] [diff] [review] Patch, v1 [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 823610 User impact if declined: Potential crashes in main B2G process Testing completed (on m-c, etc.): Trivial patch Risk to taking this patch (and alternatives if risky): Trivial patch String or UUID changes made by this patch: None
Attachment #698559 - Flags: approval-mozilla-b2g18?
Attachment #698559 - Flags: approval-mozilla-aurora?
Assignee: nobody → justin.lebar+bug
Crash Signature: [@ mozilla::dom::ipc::CurrentProcessIsForeground()]
OS: Mac OS X → All
Hardware: x86_64 → All
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment on attachment 698559 [details] [diff] [review] Patch, v1 [Triage Comment] Approving for mozilla-beta 19 and mozilla-b2g18. We wouldn't typically take a change of this nature without significant user impact, but with a week until release and only 2 days of bake time for the regressing bug, it's worth it to take a trivial fix.
Attachment #698559 - Flags: approval-mozilla-beta+
Attachment #698559 - Flags: approval-mozilla-b2g18?
Attachment #698559 - Flags: approval-mozilla-b2g18+
Attachment #698559 - Flags: approval-mozilla-aurora?
Verified as fixed on Firefox 19 Beta 3 - 20130123083802: Mozilla/5.0 (Windows NT 6.1; rv:19.0) Gecko/20100101 Firefox/19.0 Mozilla/5.0 (X11; Linux i686; rv:19.0) Gecko/20100101 Firefox/19.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:19.0) Gecko/20100101 Firefox/19.0 There are no recent crashes in Socorro either: https://crash-stats.mozilla.com/report/list?product=Firefox&query_search=signature&query_type=contains&query=mozilla%3A%3Adom%3A%3Aipc%3A%3ACurrentProcessIsForeground%28%29&reason_type=contains&date=01%2F24%2F2013%2015%3A32%3A47&range_value=4&range_unit=weeks&hang_type=any&process_type=any&do_query=1&signature=mozilla%3A%3Adom%3A%3Aipc%3A%3ACurrentProcessIsForeground%28%29
Verified as fixed on Friefox 20 Beta 1 (20130220104816): Mozilla/5.0 (Windows NT 6.1; rv:20.0) Gecko/20100101 Firefox/20.0 Mozilla/5.0 (X11; Linux i686; rv:20.0) Gecko/20100101 Firefox/20.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:20.0) Gecko/20100101 Firefox/20.0 There are no new crashes in Socorro either.
No crashes in Socorro for Firefox 20, 21, and 22, post-fix.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: