dom/ipc/ProcessPriorityManager.cpp
@@ -430,6 +430,12 @@ InitProcessPriorityManager()
 bool
 CurrentProcessIsForeground()
 {
+  // The process priority manager is the only thing which changes our priority,
+  // so if the manager does not exist, then we must be in the foreground.
+  if (!sManager) {
+    return true;
+  }
+
   return sManager->GetPriority() >= PROCESS_PRIORITY_FOREGROUND;
 }
 
